[gd_scene load_steps=5 format=2]

[ext_resource path="res://Projectiles/Projectile.pxo" type="Texture" id=1]
[ext_resource path="res://Projectiles/ChaserWaveProjectile.gd" type="Script" id=2]
[ext_resource path="res://Projectiles/Light.pxo" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[node name="ChaserWaveProjectile" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.247059, 0.533333, 0.223529, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 0.278431, 0.721569, 0.380392, 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_DronProjectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_DronProjectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
